Remove guava collections in `phenol-core`